--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^13.2.0",
+    "jest-expo": "^52.0.6"
   },
   "private": true
 }
